attempting to merge

--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header>
     <h1>
-      <a href = "index.html" class = "UD"> 🦎</a>  Seth LaMay Project 1 Site
+      Seth LaMay's Project Site
     </h1>
   <div class="navbar">
       <a href = "./">Home</a>
