added nav bar to page and fixed linking issue between the oages

--- a/components/header.html
+++ b/components/header.html
@@ -6,6 +6,6 @@
       <a href = "./">Home</a>
       <a href = "introduction.html">Events</a>
       <a href = "contract.html">Event Detail Page</a>
-      <a href = "tables.html">New event page</a>
+      <a href = "newEvent.html">New event page</a>
       </div>
   </header>
