--- a/components/header.html
+++ b/components/header.html
@@ -4,8 +4,8 @@
     </h1>
   <div class="navbar">
       <a href = "./">Home</a>
-      <a href = "introduction.html">Events</a>
-      <a href = "contract.html">Event Detail Page</a>
+      <a href = "events.html">Events</a>
+      <a href = "eventDetailPage.html">Event Detail Page</a>
       <a href = "newEvent.html">New event page</a>
       </div>
   </header>
