--- a/styles/default.css
+++ b/styles/default.css
@@ -2,7 +2,50 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
   margin: 0;
-  padding: 0;
+  padding-right: 0px;
+}
+header{
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.header {
+  background-color: #15561F;
+  color: #fff;
+  text-align: center;
+  font-size: large;
+  padding: 15px 0;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+
+.category {
+  margin-top: 30px;
+  border-bottom: 2px solid #333;
+}
+
+.category h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.event {
+  border: 1px solid #ddd;
+  background-color: #fff;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+.event a {
+  text-decoration: none;
+  color: #007BFF;
 }
 
 h1 {
@@ -13,6 +56,7 @@ h1 {
 .navbar {
   background-color: #333; /* Background color for the navbar */
   overflow: hidden;
+  padding-bottom: auto;
 }
 
 /* Navbar links */
@@ -24,6 +68,7 @@ h1 {
   padding: 14px 16px; /* Spacing around the text */
   text-decoration: none; /* Remove underline */
   font-size: 16px; /* Font size */
+  height: px;
 }
 
 /* Navbar links on hover */
@@ -49,7 +94,7 @@ h1 {
 }
 
 /* Responsive navbar */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 100px) {
   .navbar a {
       float: none; /* Reset float for small screens */
       display: block; /* Display links as blocks */
@@ -68,6 +113,8 @@ form {
   margin: 0 auto;
   background-color: #fff;
   padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -87,6 +134,7 @@ textarea,
 select {
   width: 100%;
   padding: 10px;
+  padding-right: 0px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -95,7 +143,7 @@ select {
 
 select {
   appearance: none;
-  padding-right: 30px;
+  padding-right: 0px;
   background: transparent url('arrow-down.png') no-repeat right center;
 }
 
@@ -103,6 +151,7 @@ input[type="submit"] {
   background-color: gray;
   color: #fff;
   padding: 12px 20px;
+  padding-right: px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
