--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>
+    <h1><img class="logoImg" src="../images/LTlogoBlack.png" alt="Website Logo">
       Seth LaMay's Project Site
     </h1>
   <div class="navbar">
